--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       <!--==================== HEADER ====================-->
       <header class="header header-pages" id="header">
          <nav class="nav container">
-            <a href="index.html" class="nav__logo">Tristan</a>
+            <a href="index.html" class="nav__logo">Tristan Marsh</a>
 
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
@@ -114,7 +114,7 @@
       <footer class="footer">
          <div class="footer__container container grid">
             <div class="footer__content grid">
-               <a href="index.html" class="footer__logo">Tristan</a>
+               <a href="index.html" class="footer__logo">Tristan Marsh</a>
 
                <ul class="footer__links">
                   <li>
