--- a/index.html
+++ b/index.html
@@ -111,9 +111,7 @@
                   <i class="ri-code-s-slash-line services__icon"></i>
                   <h2 class="services__title">Web Designer</h2>
                   <p class="services__description">
-                     Beautiful and elegant designs with 
-                     interfaces that are intuitive, efficient and 
-                     pleasant to use for the user.
+                     Redesigned the website layout of i360 Technologies, Inc., which led to a 15% increase in conversion rates within six weeks.
                   </p>
 
                   <button class="services__button button">Know More</button>
@@ -150,9 +148,7 @@
                   <i class="ri-layout-2-line services__icon"></i>
                   <h2 class="services__title">UI/UX</h2>
                   <p class="services__description">
-                     My designs are made with 
-                     interfaces that are intuitive, efficient and 
-                     pleasant to use for the user.
+                     Updated user interface for Jack Garson website to have a modern appeal that increased online viewership by 25% over three months.
                   </p>
 
                   <button class="services__button button">Know More</button>
@@ -189,8 +185,8 @@
                   <i class="ri-pen-nib-line services__icon"></i>
                   <h2 class="services__title">Graphic Designer</h2>
                   <p class="services__description">
-                     I create modern and elegant designs that balance the wishes of
-                     my client and my artistry to make the product appealing to the target audience.
+                     Designed autism awareness digital content for Rutgers University 
+                     as well as digital banner, and illustration for other social media platforms.
                   </p>
 
                   <button class="services__button button">Know More</button>
@@ -205,15 +201,15 @@
 
                         <ul class="services__modal-list grid">
                            <li class="services__modal-item">
-                              Utilize Adobe CC products to make vector and raster images.
+                              Utilized Adobe CC products to make vector and raster images.
                            </li>
 
                            <li class="services__modal-item">
-                              Create logo designs for content creators.
+                              Created logo designs for content creators.
                            </li>
 
                            <li class="services__modal-item">
-                              Complete advertisements for small businesses.
+                              Completed advertisements for small businesses.
                            </li>
                         </ul>
                         <br>
@@ -224,66 +220,7 @@
             </div>
          </section>
 
-         <!--==================== WORK ====================-->
-         <section class="work section">
-            <h2 class="section__title">
-               My Most <br>
-               Recent Works               
-            </h2>
-
-            <div class="work__container container grid">
-               <article class="work__card">
-                  <a href="Paws2Heart.html"_blank" class="work__link">
-                     <img src="assets/img/local palette banner.JPG" alt="image" class="work__img">
-                     <i class="ri-arrow-right-circle-line work__icon"></i>
-                  </a>
-
-                  <h2 class="work__title">Paws2Heart</h2>
-                  <span class="work__subtitle">Mobile App Design</span>
-               </article>
-
-               <article class="work__card">
-                  <a href="Department of Education.html"_blank" class="work__link">
-                     <img src="assets/img/department of education.jpg" alt="image" class="work__img">
-                     <i class="ri-arrow-right-circle-line work__icon"></i>
-                  </a>
-
-                  <h2 class="work__title">Dept of Education Redesign</h2>
-                  <span class="work__subtitle">Mobile/Desktop Website Design</span>
-               </article>
-
-               <article class="work__card">
-                  <a href="UnicefUSA.org.html"_blank" class="work__link">
-                     <img src="assets/img/unicef.JPG" alt="image" class="work__img">
-                     <i class="ri-arrow-right-circle-line work__icon"></i>
-                  </a>
-
-                  <h2 class="work__title">Unicef Mobile Prototype</h2>
-                  <span class="work__subtitle">Mobile/Desktop Website Design</span>
-               </article>
-
-               <article class="work__card">
-                  <a href="VacayVitals.html"_blank" class="work__link">
-                     <img src="assets/img/vacation.JPG" alt="image" class="work__img">
-                     <i class="ri-arrow-right-circle-line work__icon"></i>
-                  </a>
-
-                  <h2 class="work__title">Vacay Vitals</h2>
-                  <span class="work__subtitle">Mobile App Design</span>
-               </article>
-               
-
-               <article class="work__card">
-                  <a href="Local Palette.html"_blank" class="work__link">
-                     <img src="assets/img/local palette.JPG" alt="image" class="work__img">
-                     <i class="ri-arrow-right-circle-line work__icon"></i>
-                  </a>
-
-                  <h2 class="work__title">Local Palette</h2>
-                  <span class="work__subtitle">Mobile App Design</span>
-               </article>
-            </div>
-         </section>
+        
 
          <!--==================== TESTIMONIAL ====================-->
          <section class="testimonial section">
