--- a/Graphic Design Showcase.html
+++ b/Graphic Design Showcase.html
@@ -15,7 +15,7 @@
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
    <link rel="stylesheet" href="assets/css/styles.css">
 
-   <title>Department of Education Website Redesign</title>
+   <title>Graphic Design Showcase</title>
 </head>
 
 <body>
