--- a/work.html
+++ b/work.html
@@ -94,7 +94,7 @@
                      <i class="ri-arrow-right-circle-line work__icon"></i>
                   </a>
 
-                  <h2 class="work__title">Dept of Education</h2>
+                  <h2 class="work__title">Unicef USA</h2>
                   <span class="work__subtitle">Mobile/Desktop Website Design</span>
                </article>
 
