--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       <!--==================== HEADER ====================-->
       <header class="header header-pages" id="header">
          <nav class="nav container">
-            <a href="index.html" class="nav__logo">Tristan Marsh</a>
+            <a href="index.html" class="nav__logo">Tristan D Marsh</a>
 
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
