--- a/Local Palette.html
+++ b/Local Palette.html
@@ -261,7 +261,7 @@
         <footer class="footer">
             <div class="footer__container container grid">
                 <div class="footer__content grid">
-                    <a href="index.html" class="footer__logo">Tristan</a>
+                    <a href="index.html" class="footer__logo">Tristan Marsh</a>
 
                     <ul class="footer__links">
                         <li>
